--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -88,7 +88,7 @@
           <div id="basicspeed">
             <div class="header">
               <label for="data.secondaryAttributes.bs.value"
-                class="resource-label">{{data.secondaryAttributes.bs.label}}</label>
+                class="resource-label">Speed</label>
             </div>
             <div class="center">
               <input type="text" name="data.secondaryAttributes.bs.value" value="{{data.secondaryAttributes.bs.value}}"
@@ -102,12 +102,15 @@
 
     {{!-- Sheet Tab Navigation --}}
     <nav id="tabselect" class="sheet-tabs tabs" data-group="primary">
-      <div class="header">
-        <a class="item" data-tab="stats">Main</a>
-      </div>
-      <div class="header">
-        <a class="item" data-tab="items">Items</a>
-      </div>
+        <div class="header">
+            <a class="item" data-tab="stats">Main</a>
+        </div>
+        <div class="header">
+            <a class="item" data-tab="weapons">Weapons</a>
+        </div>
+        <div class="header">
+            <a class="item" data-tab="items">Items</a>
+        </div>
     </nav>
 
     {{!-- Sheet Body --}}
@@ -263,8 +266,8 @@
         </div>
       </div>
 
-      {{!-- Owned Items Tab --}}
-      <div id="items" class="tab items" data-tab="items" data-group="primary">
+      {{!-- Weapons Tab --}}
+      <div id="weapons" class="tab items" data-tab="weapons" data-group="primary">
         <ol class="items-list">
           <li class="item flexrow item-header">
             <div class="item-image"></div>
@@ -276,6 +279,7 @@
             </div>
           </li>
           {{#each actor.items as |item id|}}
+          {{#if (or (eq type "Melee-Attack") (eq type "Ranged-Attack") ) }}
           <li class="item flexrow" data-item-id="{{item._id}}">
             <div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24" /></div>
             <div class="item-name">
@@ -312,6 +316,62 @@
               <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
             </div>
           </li>
+          {{/if}}
+          {{/each}}
+        </ol>
+      </div>
+
+      {{!-- Items Tab --}}
+      <div id="items" class="tab items" data-tab="items" data-group="primary">
+        <ol class="items-list">
+          <li class="item flexrow item-header">
+            <div class="item-image"></div>
+            <div class="item-name">Name</div>
+            <div class="item-notes">Notes</div>
+            <div class="item-rolls">Skill - - Damage - - ArmDiv</div>
+            <div class="item-controls">
+              <!--<a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add</a>-->
+            </div>
+          </li>
+          {{#each actor.items as |item id|}}
+          {{#if (eq type "Equipment") }}
+          <li class="item flexrow" data-item-id="{{item._id}}">
+            <div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24" /></div>
+            <div class="item-name">
+              <input type="text" value="{{item.name}}" title="{{item.name}}" style="text-align:left;" />
+            </div>
+            <div class="item-notes">
+              <input type="text" value="{{data.notes}}" title="{{data.notes}}" style="text-align:left;" />
+            </div>
+            {{#if (ne data.level undefined)}}
+            {{#if (or (eq type "Melee-Attack") (eq type "Ranged-Attack") ) }}
+            <div class="item-attack">
+              <label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
+                     data-label="Attacks with &lt;b&gt;{{name}}&lt;/b&gt;." data-type="skill"></label>
+              {{data.level}} -
+              - <label for="data.damage" class="fa fa-dice-six rollable" data-roll="{{data.damage}}"
+                       data-label="Rolls &lt;b&gt;{{data.damageType}}&lt;/b&gt; damage for &lt;b&gt;{{name}}&lt;/b&gt;."
+                       data-type="damage"></label>
+              {{data.damage}}
+              <label>{{data.damageType}} -</label>
+              <label>- /{{data.armourDiv}}</label>
+            </div>
+            {{else}}
+            <div class="item-skill">
+              <label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
+                     data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
+              {{data.level}}
+            </div>
+            {{/if}}
+            {{else}}
+            <div></div>
+            {{/if}}
+            <div class="item-controls">
+              <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+            </div>
+          </li>
+          {{/if}}
           {{/each}}
         </ol>
       </div>
