--- a/gurps4e.css
+++ b/gurps4e.css
@@ -128,6 +128,12 @@
   border-top: 2px groove darkgoldenrod;
 }
 
+#primary-attributes {
+  display: grid;
+  grid-template-columns: repeat(9,auto);
+  border-top: 2px groove darkgoldenrod;
+}
+
 #checks {
   display: grid;
   grid-template-columns: repeat(9,auto);
@@ -177,6 +183,21 @@
   padding: 2px;
   border: 1px dotted grey;
   margin: 1px;
+  width: 100%;
+}
+
+.primary-attribute {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  padding: 2px;
+  border: 1px dotted grey;
+  margin: 1px;
+}
+
+.primary-attribute .title {
+  grid-column: 1 / 3;
+  justify-self: center;
+  align-items: center;
   width: 100%;
 }
 
