--- a/gurps4e.css
+++ b/gurps4e.css
@@ -188,14 +188,22 @@
 
 .primary-attribute {
 	display: grid;
-	grid-template-columns: repeat(5,1fr);
+	grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
 	padding: 2px;
 	border: 1px dotted grey;
 	margin: 1px;
 }
 
-.primary-attribute .title {
-	grid-column: 1 / 3;
+.primary-attribute-header {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	padding: 2px;
+	border: 1px dotted grey;
+	margin: 1px;
+}
+
+.primary-attribute-header .title {
+	font-weight: bolder;
 	justify-self: center;
 	align-items: center;
 	width: 100%;
