--- a/gurps4e.css
+++ b/gurps4e.css
@@ -24,8 +24,8 @@
 	grid-area: personal;
 	display: grid;
 	grid-template:
-		"portrait actorname racegender"
-		"portrait secondaryAttributes secondaryAttributes";
+		"portrait actorname racegender pointTotals"
+		"portrait secondaryAttributes secondaryAttributes pointTotals";
 	grid-template-columns: 100px 1fr 96px;
 	grid-template-rows: 55px 50px;
 	grid-gap: 5px;
@@ -61,6 +61,12 @@
 	display: grid;
 	grid-template-rows: repeat(2, 1fr);
 	align-items: center;
+}
+
+#pointTotals {
+	grid-area: pointTotals;
+	display: grid;
+	grid-template-rows: repeat(2, 1fr);
 }
 
 #secondaryAttributes {
@@ -174,6 +180,14 @@
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	border-top: 2px groove darkgoldenrod;
+}
+
+.pointTotal {
+
+}
+
+.unspentEntry {
+	width: 5ch !important;
 }
 
 .attack {
