--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -310,6 +310,10 @@
 
 			{{!-- Items Tab --}}
 			<div id="items" class="tab items" data-tab="items" data-group="primary">
+				<div class="encumbranceTable">
+
+				</div>
+				{{!-- List of Items --}}
 				<ol class="items-list">
 					<li class="item flexrow item-header">
 						<div class="item-image"></div>
