--- a/templates/item/trait-sheet.html
+++ b/templates/item/trait-sheet.html
@@ -15,6 +15,14 @@
                         <option value="quirk">Quirk</option>
                     </select>
                 </div>
+                <div class="flexrow">
+                    <label class="resource-label">Level</label>
+                    <input type="text" name="data.level" value="{{data.level}}" data-dtype="Number"/>
+                </div>
+                <div class="flexrow">
+                    <label class="resource-label">Points</label>
+                    <input type="text" name="data.points" value="{{data.points}}" data-dtype="Number"/>
+                </div>
             </div>
         </div>
     </header>
