Skill points save and are calculated into the total properly

--- a/templates/item/rollable-sheet.html
+++ b/templates/item/rollable-sheet.html
@@ -26,6 +26,10 @@
                     <label class="resource-label">Level</label>
                     <input type="text" name="data.level" value="{{data.level}}" data-dtype="Number"/>
                 </div>
+                <div class="flexrow">
+                    <label class="resource-label">Points</label>
+                    <input type="text" name="data.points" value="{{data.points}}" data-dtype="Number"/>
+                </div>
             </div>
         </div>
     </header>
