--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -205,21 +205,17 @@
 									<div class="item-image">
 										<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 									</div>
-
 									<div class="item-name">
 											{{item.name}}
 									</div>
-
 									<div class="item-notes">
 											{{data.notes}}
 									</div>
-
 									<div class="item-skill">
 											<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
 														 data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
 											{{data.level}}
 									</div>
-
 									<div class="item-points">
 										<div class="item-notes">
 											{{data.points}}
@@ -243,7 +239,8 @@
 						<div class="item-image"></div>
 						<div class="item-name">Name</div>
 						<div class="item-notes">Notes</div>
-						<div class="item-rolls">Skill - - Damage - - ArmDiv</div>
+						<div class="item-rolls">Skill</div>
+						<div class="item-points">Points</div>
 						<div class="item-controls">
 							<!--<a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add</a>-->
 						</div>
@@ -253,34 +250,21 @@
 					<li class="item flexrow" data-item-id="{{item._id}}">
 						<div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24" /></div>
 						<div class="item-name">
-							<input type="text" value="{{item.name}}" title="{{item.name}}" style="text-align:left;" />
+							{{item.name}}
 						</div>
 						<div class="item-notes">
-							<input type="text" value="{{data.notes}}" title="{{data.notes}}" style="text-align:left;" />
+							{{data.notes}}
 						</div>
-						{{#if (ne data.level undefined)}}
-						{{#if (or (eq type "Melee-Attack") (eq type "Ranged-Attack") ) }}
-						<div class="item-attack">
-							<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
-										 data-label="Attacks with &lt;b&gt;{{name}}&lt;/b&gt;." data-type="skill"></label>
-							{{data.level}} -
-							- <label for="data.damage" class="fa fa-dice-six rollable" data-roll="{{data.damage}}"
-											 data-label="Rolls &lt;b&gt;{{data.damageType}}&lt;/b&gt; damage for &lt;b&gt;{{name}}&lt;/b&gt;."
-											 data-type="damage"></label>
-							{{data.damage}}
-							<label>{{data.damageType}} -</label>
-							<label>- /{{data.armourDiv}}</label>
-						</div>
-						{{else}}
 						<div class="item-skill">
 							<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
 										 data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
 							{{data.level}}
 						</div>
-						{{/if}}
-						{{else}}
-						<div></div>
-						{{/if}}
+						<div class="item-points">
+							<div class="item-notes">
+								{{data.points}}
+							</div>
+						</div>
 						<div class="item-controls">
 							<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
 							<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
