--- a/templates/item/rollable-sheet.html
+++ b/templates/item/rollable-sheet.html
@@ -14,17 +14,40 @@
                     <label class="resource-label">Category</label>
                     <select name="data.category">
                         <option value="skill">Skill</option>
-                        <option value="spell">Spell</option>
                         <option value="technique">Technique</option>
-                        <option value="rms">Ritual Magic Spell</option>
                     </select>
-                    <!--
-                        <input type="text" name="data.category" value="{{data.category}}" data-dtype="String"/>
-                    -->
+                </div>
+
+                <div class="flexrow">
+                    <label class="resource-label">Difficulty</label>
+                    <select name="data.difficulty">
+                        <option value="E">Easy</option>
+                        <option value="A">Average</option>
+                        <option value="H">Hard</option>
+                        <option value="VH">Very Hard</option>
+                        <option value="W">Wildcard</option>
+                    </select>
+                </div>
+
+                <div class="flexrow">
+                    <label class="resource-label">Base Attribute</label>
+                    <select name="data.baseAttr">
+                        <option value="ST">ST</option>
+                        <option value="DX">DX</option>
+                        <option value="IQ">IQ</option>
+                        <option value="HT">HT</option>
+                        <option value="Per">Per</option>
+                        <option value="Will">Will</option>
+                    </select>
+                </div>
+
+                <div class="flexrow">
+                    <label class="resource-label">Modifier</label>
+                    <input type="text" name="data.mod" value="{{data.mod}}" data-dtype="Number"/>
                 </div>
                 <div class="flexrow">
                     <label class="resource-label">Level</label>
-                    <input type="text" name="data.level" value="{{data.level}}" data-dtype="Number"/>
+                    {{data.level}}
                 </div>
                 <div class="flexrow">
                     <label class="resource-label">Points</label>
