Damage rolls work now

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -289,7 +289,7 @@
 							<td>{{enc.move}}</td>
 							<td>{{enc.dodge}}
 								<label for="enc.dodge" class="fa fa-dice-six rollable" data-level="{{enc.dodge}}"
-									   data-label="Makes a &lt;b&gt;{{enc.title}}&lt;/b&gt; roll." data-type="skill"></label>
+									   data-label="Makes a &lt;b&gt;Dodge&lt;/b&gt; roll." data-type="skill"></label>
 							</td>
 						</tr>
 						{{/each}}
@@ -362,7 +362,7 @@
 							<td>{{enc.move}}</td>
 							<td>{{enc.dodge}}
 								<label for="enc.dodge" class="fa fa-dice-six rollable" data-level="{{enc.dodge}}"
-								   data-label="Makes a &lt;b&gt;{{enc.title}}&lt;/b&gt; roll." data-type="skill"></label>
+								   data-label="Makes a &lt;b&gt;Dodge&lt;/b&gt; roll." data-type="skill"></label>
 							</td>
 						</tr>
 						{{/each}}
