--- a/templates/item/rollable-sheet.html
+++ b/templates/item/rollable-sheet.html
@@ -7,37 +7,39 @@
             <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
             <div class="">
                 <div class="flexrow">
-                    <label class="resource-label">On Main Tab</label>
-                    <input type="checkbox" name="data.onMain" {{checked data.onMain}} data-dtype="Boolean"/>
-                </div>
-                <div class="flexrow">
                     <label class="resource-label">Category</label>
                     <select name="data.category">
+                        {{#select data.category}}
                         <option value="skill">Skill</option>
                         <option value="technique">Technique</option>
+                        {{/select}}
                     </select>
                 </div>
 
                 <div class="flexrow">
                     <label class="resource-label">Difficulty</label>
                     <select name="data.difficulty">
+                        {{#select data.difficulty}}
                         <option value="E">Easy</option>
                         <option value="A">Average</option>
                         <option value="H">Hard</option>
                         <option value="VH">Very Hard</option>
                         <option value="W">Wildcard</option>
+                        {{/select}}
                     </select>
                 </div>
 
                 <div class="flexrow">
                     <label class="resource-label">Base Attribute</label>
                     <select name="data.baseAttr">
+                        {{#select data.baseAttr}}
                         <option value="ST">ST</option>
                         <option value="DX">DX</option>
                         <option value="IQ">IQ</option>
                         <option value="HT">HT</option>
                         <option value="Per">Per</option>
                         <option value="Will">Will</option>
+                        {{/select}}
                     </select>
                 </div>
 
